SigmaCodebackup3rdSep/objects/Payment_Client__c.object
<CustomObject>
    <description>Do not delete this. It&apos;s very important for Magento platform intergration.</description>
    <fields>
        <fullName>AppID__c</fullName>
        <displayFormat>PC{00000}</displayFormat>
        <label>AppID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AppName__c</fullName>
        <label>AppName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Security_Token__c</fullName>
        <label>App Security Token</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Clients (Merchant Account)</relationshipLabel>
        <relationshipName>Payment_Clients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Clients</relationshipLabel>
        <relationshipName>Payment_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseURL__c</fullName>
        <label>ResponseURL</label>
        <type>Url</type>
    </fields>
    <label>Payment Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>